Moved stuff to EntityListener and added config for tntSnowballs.

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,9 @@
 # Config for CaptureMob
 # Flag mobs as catchable.
 
+tntSnowball:
+    enabled: true
+    range: 3
 mobs:
     Creeper: true
     Skeleton: true
