Added Display Tables again, still WIP

--- a/plugin.yml
+++ b/plugin.yml
@@ -4,3 +4,9 @@ version: 0.1
 author: Leo
 description: Plugin for catching mobs with eggs.
 commands:
+    table:
+        description: Command for creating a displaytable!
+        usage: /<command>
+    removetables:
+        description: Command for removing all displaytables!
+        usage: /<command>
