Changes:  - Prevent accidental /reload displaytable by using /displaytable reload  - Use HashMap instead of List faster if list.size() >= 10  - Correct usage of ignoreCancelled.  - Use MAGIC_DELAY to increase performance when detecting displaytable items.(1000x faster)  - Remove redundant Catch(Exception e), events have these catchers by default.

--- a/plugin.yml
+++ b/plugin.yml
@@ -4,6 +4,6 @@ version: 0.5
 author: Leo
 description: Plugin for catching mobs with eggs.
 commands:
-    reloadtables:
+    displaytables:
         description: Command for reloading all Display Tables!
-        usage: /<command>
+        usage: /<command> [reload]
